--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.3.22",
     "geist": "^1.3.0",
-    "next": "14.2.2",
+    "next": "^14.2.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
